Data functions have been added

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -46,7 +46,7 @@ html, body {
     color: $font-color;
     width: 100vw;
     min-height: 100vh;
-    font-family: $font-color;
+    font-family: $font-stack;
     font-size: 22px;
 }
 
