--- a/sass/style.css
+++ b/sass/style.css
@@ -14,7 +14,7 @@ html, body {
   color: #000;
   width: 100vw;
   min-height: 100vh;
-  font-family: #000;
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 22px;
 }
 
